finish lab4_1/2